Register view page added

--- a/ECommerce.Web/Views/Auth/Login.cshtml
+++ b/ECommerce.Web/Views/Auth/Login.cshtml
@@ -205,7 +205,7 @@
         </div>
 
         <div class="login-footer">
-            <p>Hesabınız yok mu? <a href="#">Kayıt Olun</a></p>
+            <p>Hesabınız yok mu? <a asp-controller="auth" asp-action="register">Kayıt Olun</a></p>
             <p style="margin-top: 0.5rem;"><a href="#">Şifremi Unuttum</a></p>
         </div>
     </div>
