web feature: forgot password page added

--- a/ECommerce.Web/Views/Auth/Login.cshtml
+++ b/ECommerce.Web/Views/Auth/Login.cshtml
@@ -219,7 +219,7 @@
 
         <div class="login-footer">
             <p>Hesabınız yok mu? <a asp-controller="auth" asp-action="register">Kayıt Olun</a></p>
-            <p style="margin-top: 0.5rem;"><a href="#">Şifremi Unuttum</a></p>
+            <p style="margin-top: 0.5rem;"><a asp-controller="auth" asp-action="forgotpassword">Şifremi Unuttum</a></p>
         </div>
     </div>
 </div>
