--- a/ECommerce.Web/Views/Auth/Register.cshtml
+++ b/ECommerce.Web/Views/Auth/Register.cshtml
@@ -76,7 +76,7 @@
                     <div class="checkbox-wrapper">
                         <input type="checkbox" id="electronicConsent" name="ElectronicConsent" asp-for="ElectronicConsent" />
                         <label class="checkbox-label">
-                            Aydınlatma Metninde belirtilen ilkeler nezdinde Elektronik Ticaret İletişi almak istiyorum.
+                            Aydınlatma Metninde belirtilen ilkeler nezdinde Elektronik Ticaret İletisi almak istiyorum.
                         </label>
                     </div>
                 </div>
