Add user consent fields and refactor AuthController

--- a/ECommerce.Web/Views/Auth/Register.cshtml
+++ b/ECommerce.Web/Views/Auth/Register.cshtml
@@ -93,7 +93,7 @@
 
                 <div class="checkbox-group">
                     <div class="checkbox-wrapper">
-                        <input type="checkbox" id="kvkkConsent" name="KvkkConsent" asp-for="KvkkConsent" required />
+                        <input type="checkbox" id="kvkkConsent" name="PrivacyPolicyConsent" asp-for="PrivacyPolicyConsent" required />
                         <label class="checkbox-label">
                             Kişisel verilerin işlenmesine ilişkin <span class="modal-link" data-modal="kvkkModal">Aydınlatma Metnini</span> okudum.
                         </label>
