--- a/ECommerce.Web/Views/Home/Index.cshtml
+++ b/ECommerce.Web/Views/Home/Index.cshtml
@@ -169,7 +169,7 @@
     <div class="hero-logo">
         <i class="bi bi-bag-heart"></i>
     </div>
-    <h1 class="hero-title">MCA Mağaza'ya Hoş Geldiniz</h1>
+    <h1 class="hero-title">Hoş Geldiniz</h1>
     <p class="hero-subtitle">
         Harika ürünleri uygun fiyatlarla keşfedin. Güvenebileceğiniz kalite, güvenebileceğiniz hizmet.
     </p>
